--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="delete">DEL</string>
     <string name="equals">=</string>
     <string name="error_message">ERROR</string>
+    <string name="converter">Converter</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="convert">Convert</string>
+    <string name="result">Result</string>
+    <string name="amount">Amount</string>
 </resources>
